# physio-qc

./: .gitignore  CHANGES.md  DEVELOPMENT.md  ETCO2_ETO2_INTEGRATION_GUIDE.md  ETCO2_ETO2_TAB_CODE.py  INSTALLATION_COMPLETE.md  Makefile  QUICK_START.md  README.md  README.md.in  app.py  app.py.backup  app.py.working_backup  config.py  pyproject.toml  test_app.py
algorithms/: bp_delineator.py  quality_detection.py
metrics/: blood_pressure.py  ecg.py  etco2.py  eto2.py  ppg.py  rsp.py  spo2.py
scripts/: generate_readme.py
utils/: conversions.py  export.py  file_io.py  peak_editing.py
