[project]
name = "physio-qc"
version = "0.1.0"
description = "Quality control tool for physiological signals (ECG, RSP, PPG, Blood Pressure)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["physiological-signals", "ecg", "ppg", "respiration", "blood-pressure", "quality-control"]

dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "neurokit2>=0.2.7",
    "bioread>=3.0.0",
    "plotly>=5.18.0",
    "numba>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metrics", "algorithms", "utils"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=metrics",
    "--cov=algorithms",
    "--cov=utils",
    "--cov-report=term-missing",
    "--cov-report=html",
]
